--- a/genindex.html
+++ b/genindex.html
@@ -297,14 +297,14 @@
     array comparisons
 
       <ul>
-        <li><a href="python/numpy.html#index-9">numpy</a>
+        <li><a href="python/numpy.html#index-10">numpy</a>
 </li>
       </ul></li>
       <li><a href="python/how_to_write_a_program.html#index-0">assert</a>, <a href="python/misc.html#index-3">[1]</a>
 </li>
       <li><a href="python/variables.html#index-1">assignment</a>
 </li>
-      <li><a href="python/variables.html#index-1">assignment unpacking</a>
+      <li><a href="python/dictionaries.html#index-2">assignment unpacking</a>, <a href="python/variables.html#index-1">[1]</a>
 </li>
       <li>
     axis
@@ -434,7 +434,7 @@
     count
 
       <ul>
-        <li><a href="python/numpy.html#index-10">numpy</a>
+        <li><a href="python/numpy.html#index-11">numpy</a>
 </li>
       </ul></li>
   </ul></td>
@@ -461,17 +461,19 @@
         <li><a href="python/misc.html#index-1">string, encode</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     dict
 
       <ul>
         <li><a href="python/misc.html#index-4">comprehension</a>
 </li>
+        <li><a href="python/dictionaries.html#index-0">types</a>
+</li>
         <li><a href="python/types.html#index-7">types collection objects</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/dir_help.html#index-0">dir()</a>
 </li>
       <li>
@@ -526,8 +528,6 @@
         <li><a href="python/logic.html#index-6">loops</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     escaping characters
 
@@ -535,11 +535,20 @@
         <li><a href="python/misc.html#index-0">str</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     evaluation
 
       <ul>
         <li><a href="python/numpy.html#index-4">numpy</a>
+</li>
+      </ul></li>
+      <li>
+    Exceptions
+
+      <ul>
+        <li><a href="python/dictionaries.html#index-1">KeyError</a>
 </li>
       </ul></li>
       <li>
@@ -744,6 +753,13 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
+    KeyError
+
+      <ul>
+        <li><a href="python/dictionaries.html#index-1">Exceptions</a>
+</li>
+      </ul></li>
+      <li>
     keyword
 
       <ul>
@@ -788,7 +804,7 @@
     logical operations
 
       <ul>
-        <li><a href="python/numpy.html#index-9">numpy</a>
+        <li><a href="python/numpy.html#index-10">numpy</a>
 </li>
       </ul></li>
       <li><a href="python/logic.html#index-3">looping</a>
@@ -857,6 +873,8 @@
         <li><a href="python/numpy.html#index-6">numpy</a>
 </li>
       </ul></li>
+      <li><a href="python/dictionaries.html#index-3">method chaining</a>, <a href="python/misc.html#index-6">[1]</a>, <a href="python/numpy.html#index-9">[2]</a>
+</li>
       <li><a href="python/functions.html#index-3">methods</a>
 </li>
       <li>
@@ -922,19 +940,19 @@
 </li>
         <li><a href="python/numpy.html#index-8">any</a>
 </li>
-        <li><a href="python/numpy.html#index-9">array comparisons</a>
+        <li><a href="python/numpy.html#index-10">array comparisons</a>
 </li>
         <li><a href="python/numpy.html#index-5">axis</a>
 </li>
         <li><a href="python/numpy.html#index-8">conditionals</a>
 </li>
-        <li><a href="python/numpy.html#index-10">count</a>
+        <li><a href="python/numpy.html#index-11">count</a>
 </li>
         <li><a href="python/numpy.html#index-4">evaluation</a>
 </li>
         <li><a href="python/numpy.html#index-3">indexing</a>
 </li>
-        <li><a href="python/numpy.html#index-9">logical operations</a>
+        <li><a href="python/numpy.html#index-10">logical operations</a>
 </li>
         <li><a href="python/numpy.html#index-1">matrix</a>
 </li>
@@ -1290,6 +1308,8 @@
         <li><a href="python/types.html#index-5">collection objects, list</a>
 </li>
         <li><a href="python/types.html#index-6">collection objects, tuple</a>
+</li>
+        <li><a href="python/dictionaries.html#index-0">dict</a>
 </li>
         <li><a href="python/types.html#index-2">float</a>
 </li>
