deploy: 944ab7a7eb2ec925077bf685cedf7b44a352ac13

--- a/genindex.html
+++ b/genindex.html
@@ -795,7 +795,7 @@
     literal
 
       <ul>
-        <li><a href="python/strings.html#index-0">string</a>
+        <li><a href="python/strings.html#index-1">string</a>
 </li>
       </ul></li>
   </ul></td>
@@ -921,7 +921,7 @@
     new line
 
       <ul>
-        <li><a href="python/strings.html#index-1">string</a>
+        <li><a href="python/strings.html#index-2">string</a>
 </li>
       </ul></li>
       <li>
@@ -1140,7 +1140,7 @@
     space
 
       <ul>
-        <li><a href="python/strings.html#index-1">string</a>
+        <li><a href="python/strings.html#index-2">string</a>
 </li>
       </ul></li>
       <li>
@@ -1173,9 +1173,8 @@
         <li><a href="python/indexing.html#index-2">slice</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python/types.html#index-0">str</a>
+      <li>
+    str
 
       <ul>
         <li><a href="python/misc.html#index-2">b&#34;&#34;</a>
@@ -1199,6 +1198,8 @@
         <li><a href="python/misc.html#index-1">string, bytes</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     stride
 
@@ -1206,7 +1207,8 @@
         <li><a href="python/indexing.html#index-2">slice</a>
 </li>
       </ul></li>
-      <li><a href="python/types.html#index-0">string</a>
+      <li>
+    string
 
       <ul>
         <li><a href="python/misc.html#index-1">bytes str</a>
@@ -1215,15 +1217,17 @@
 </li>
         <li><a href="python/misc.html#index-1">encode decode</a>
 </li>
-        <li><a href="python/strings.html#index-0">literal</a>
+        <li><a href="python/strings.html#index-1">literal</a>
 </li>
-        <li><a href="python/strings.html#index-1">new line</a>
+        <li><a href="python/strings.html#index-2">new line</a>
 </li>
-        <li><a href="python/strings.html#index-1">space</a>
+        <li><a href="python/strings.html#index-2">space</a>
 </li>
-        <li><a href="python/strings.html#index-1">tab</a>
+        <li><a href="python/strings.html#index-2">tab</a>
 </li>
-        <li><a href="python/strings.html#index-1">white space</a>
+        <li><a href="python/strings.html#index-0">types</a>, <a href="python/types.html#index-0">[1]</a>
+</li>
+        <li><a href="python/strings.html#index-2">white space</a>
 </li>
       </ul></li>
       <li>
@@ -1261,7 +1265,7 @@
     tab
 
       <ul>
-        <li><a href="python/strings.html#index-1">string</a>
+        <li><a href="python/strings.html#index-2">string</a>
 </li>
       </ul></li>
       <li><a href="python/misc.html#index-3">testing</a>
@@ -1316,6 +1320,8 @@
         <li><a href="python/types.html#index-1">int</a>
 </li>
         <li><a href="python/types.html#index-4">None</a>
+</li>
+        <li><a href="python/strings.html#index-0">string</a>, <a href="python/types.html#index-0">[1]</a>
 </li>
         <li><a href="python/types.html#index-3">True / False</a>
 </li>
@@ -1387,7 +1393,7 @@
 </li>
         <li><a href="python/logic.html#index-0">&#34;\t&#34;</a>
 </li>
-        <li><a href="python/strings.html#index-1">string</a>
+        <li><a href="python/strings.html#index-2">string</a>
 </li>
       </ul></li>
   </ul></td>
