deploy: 44da43c2dd535c534782bead5564f7b3a0dffba7

--- a/genindex.html
+++ b/genindex.html
@@ -238,7 +238,7 @@
     #
 
       <ul>
-        <li><a href="python/logic.html#index-7">comment</a>
+        <li><a href="python/logic.html#index-8">comment</a>
 </li>
       </ul></li>
       <li><a href="python/import.html#index-1">3rd party libraries</a>
@@ -302,7 +302,7 @@
       </ul></li>
       <li><a href="python/how_to_write_a_program.html#index-0">assert</a>, <a href="python/misc.html#index-3">[1]</a>
 </li>
-      <li><a href="python/variables.html#index-1">assignment</a>
+      <li><a href="python/logic.html#index-6">assignment</a>, <a href="python/variables.html#index-1">[1]</a>
 </li>
       <li><a href="python/dictionaries.html#index-2">assignment unpacking</a>, <a href="python/variables.html#index-1">[1]</a>
 </li>
@@ -385,16 +385,16 @@
     comment
 
       <ul>
-        <li><a href="python/logic.html#index-7">#</a>
+        <li><a href="python/logic.html#index-8">#</a>
 </li>
-        <li><a href="python/logic.html#index-7">comment lines</a>
+        <li><a href="python/logic.html#index-8">comment lines</a>
 </li>
       </ul></li>
       <li>
     comment lines
 
       <ul>
-        <li><a href="python/logic.html#index-7">comment</a>
+        <li><a href="python/logic.html#index-8">comment</a>
 </li>
       </ul></li>
   </ul></td>
@@ -525,7 +525,7 @@
     enumerate
 
       <ul>
-        <li><a href="python/logic.html#index-6">loops</a>
+        <li><a href="python/logic.html#index-7">loops</a>
 </li>
       </ul></li>
       <li>
@@ -813,7 +813,7 @@
     loops
 
       <ul>
-        <li><a href="python/logic.html#index-6">enumerate</a>
+        <li><a href="python/logic.html#index-7">enumerate</a>
 </li>
         <li><a href="python/logic.html#index-5">for</a>
 </li>
