--- a/genindex.html
+++ b/genindex.html
@@ -241,7 +241,7 @@
         <li><a href="python/logic.html#index-8">comment</a>
 </li>
       </ul></li>
-      <li><a href="python/import.html#index-1">3rd party libraries</a>
+      <li><a href="python/import.html#index-2">3rd party libraries</a>
 </li>
       <li><a href="python/operators.html#index-0">&lt;</a>
 </li>
@@ -884,6 +884,13 @@
         <li><a href="python/start.html#index-3">maths</a>
 </li>
       </ul></li>
+      <li>
+    module
+
+      <ul>
+        <li><a href="python/import.html#index-1">types</a>
+</li>
+      </ul></li>
       <li><a href="python/import.html#index-0">modules</a>
 </li>
       <li>
@@ -1270,7 +1277,7 @@
       </ul></li>
       <li><a href="python/misc.html#index-3">testing</a>
 </li>
-      <li><a href="python/import.html#index-1">third party libraries</a>
+      <li><a href="python/import.html#index-2">third party libraries</a>
 </li>
       <li>
     True / False
@@ -1299,8 +1306,6 @@
         <li><a href="python/types.html#index-8">types</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     types
 
@@ -1318,6 +1323,8 @@
         <li><a href="python/types.html#index-2">float</a>
 </li>
         <li><a href="python/types.html#index-1">int</a>
+</li>
+        <li><a href="python/import.html#index-1">module</a>
 </li>
         <li><a href="python/types.html#index-4">None</a>
 </li>
