deploy: 3b5f6be629ae9ead68c7753aca73da81bb81a5b3

--- a/genindex.html
+++ b/genindex.html
@@ -241,7 +241,7 @@
         <li><a href="python/logic.html#index-8">comment</a>
 </li>
       </ul></li>
-      <li><a href="python/import.html#index-2">3rd party libraries</a>
+      <li><a href="python/import.html#index-3">3rd party libraries</a>
 </li>
       <li><a href="python/operators.html#index-0">&lt;</a>
 </li>
@@ -289,15 +289,21 @@
         <li><a href="python/writing_functions.html#index-2">function</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/numpy.html#index-0">array</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     array comparisons
 
       <ul>
         <li><a href="python/numpy.html#index-10">numpy</a>
+</li>
+      </ul></li>
+      <li><a href="python/import.html#index-2">as</a>
+
+      <ul>
+        <li><a href="python/iterators.html#index-3">keyword</a>
 </li>
       </ul></li>
       <li><a href="python/how_to_write_a_program.html#index-0">assert</a>, <a href="python/misc.html#index-3">[1]</a>
@@ -428,6 +434,13 @@
         <li><a href="python/numpy.html#index-8">numpy</a>
 </li>
       </ul></li>
+      <li>
+    coordinates
+
+      <ul>
+        <li><a href="python/visualisation.html#index-0">plotly</a>
+</li>
+      </ul></li>
       <li><a href="python/misc.html#index-3">correctness</a>
 </li>
       <li>
@@ -443,6 +456,13 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    data
+
+      <ul>
+        <li><a href="python/visualisation.html#index-2">plotly</a>
+</li>
+      </ul></li>
       <li><a href="intro.html#index-0">Data Science</a>
 </li>
       <li>
@@ -461,19 +481,21 @@
         <li><a href="python/misc.html#index-1">string, encode</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     dict
 
       <ul>
         <li><a href="python/misc.html#index-4">comprehension</a>
 </li>
+        <li><a href="python/visualisation.html#index-2">plotly</a>
+</li>
         <li><a href="python/dictionaries.html#index-0">types</a>
 </li>
         <li><a href="python/types.html#index-7">types collection objects</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/dir_help.html#index-0">dir()</a>
 </li>
       <li>
@@ -678,10 +700,17 @@
 <h2 id="H">H</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python/dir_help.html#index-1">help()</a>
+      <li>
+    heigh
+
+      <ul>
+        <li><a href="python/visualisation.html#index-1">plotly</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python/dir_help.html#index-1">help()</a>
+</li>
       <li>
     How to ask for help related to these notes
 
@@ -763,6 +792,8 @@
     keyword
 
       <ul>
+        <li><a href="python/iterators.html#index-3">as</a>
+</li>
         <li><a href="python/iterators.html#index-2">yield</a>
 </li>
       </ul></li>
@@ -781,6 +812,13 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    layout
+
+      <ul>
+        <li><a href="python/visualisation.html#index-2">plotly</a>
+</li>
+      </ul></li>
       <li><a href="python/lists.html#index-1">len()</a>
 </li>
       <li><a href="python/lists.html#index-0">list</a>
@@ -826,6 +864,13 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    marker
+
+      <ul>
+        <li><a href="python/visualisation.html#index-2">plotly</a>
+</li>
+      </ul></li>
       <li><a href="python/numpy.html#index-0">maths</a>
 
       <ul>
@@ -1023,6 +1068,31 @@
         <li><a href="python/files.html#index-0">screencasts</a>
 </li>
       </ul></li>
+      <li>
+    plotly
+
+      <ul>
+        <li><a href="python/visualisation.html#index-0">coordinates</a>
+</li>
+        <li><a href="python/visualisation.html#index-2">data</a>
+</li>
+        <li><a href="python/visualisation.html#index-2">dict</a>
+</li>
+        <li><a href="python/visualisation.html#index-1">heigh</a>
+</li>
+        <li><a href="python/visualisation.html#index-2">layout</a>
+</li>
+        <li><a href="python/visualisation.html#index-2">marker</a>
+</li>
+        <li><a href="python/visualisation.html#index-0">scatter</a>
+</li>
+        <li><a href="python/visualisation.html#index-2">symbol</a>
+</li>
+        <li><a href="python/visualisation.html#index-2">traces</a>
+</li>
+        <li><a href="python/visualisation.html#index-1">width</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
@@ -1101,6 +1171,13 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/numpy.html#index-2">scalar</a>
 </li>
+      <li>
+    scatter
+
+      <ul>
+        <li><a href="python/visualisation.html#index-0">plotly</a>
+</li>
+      </ul></li>
       <li><a href="python/namespace.html#index-0">scope</a>
 </li>
       <li>
@@ -1254,6 +1331,13 @@
 </li>
       </ul></li>
       <li>
+    symbol
+
+      <ul>
+        <li><a href="python/visualisation.html#index-2">plotly</a>
+</li>
+      </ul></li>
+      <li>
     syntax
 
       <ul>
@@ -1277,8 +1361,15 @@
       </ul></li>
       <li><a href="python/misc.html#index-3">testing</a>
 </li>
-      <li><a href="python/import.html#index-2">third party libraries</a>
+      <li><a href="python/import.html#index-3">third party libraries</a>
 </li>
+      <li>
+    traces
+
+      <ul>
+        <li><a href="python/visualisation.html#index-2">plotly</a>
+</li>
+      </ul></li>
       <li>
     True / False
 
@@ -1306,6 +1397,8 @@
         <li><a href="python/types.html#index-8">types</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     types
 
@@ -1405,6 +1498,13 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    width
+
+      <ul>
+        <li><a href="python/visualisation.html#index-1">plotly</a>
+</li>
+      </ul></li>
       <li>
     writing
 
