deploy: 6585aff8adb6333a51793206d61befe80d3156c2

--- a/genindex.html
+++ b/genindex.html
@@ -269,17 +269,24 @@
 </li>
       </ul></li>
       <li>
+    advanced indexing
+
+      <ul>
+        <li><a href="python/numpy.html#index-4">numpy</a>
+</li>
+      </ul></li>
+      <li>
     all
 
       <ul>
-        <li><a href="python/numpy.html#index-8">numpy</a>
+        <li><a href="python/numpy.html#index-9">numpy</a>
 </li>
       </ul></li>
       <li>
     any
 
       <ul>
-        <li><a href="python/numpy.html#index-8">numpy</a>
+        <li><a href="python/numpy.html#index-9">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -289,15 +296,15 @@
         <li><a href="python/writing_functions.html#index-2">function</a>
 </li>
       </ul></li>
-      <li><a href="python/numpy.html#index-0">array</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python/numpy.html#index-0">array</a>
+</li>
       <li>
     array comparisons
 
       <ul>
-        <li><a href="python/numpy.html#index-10">numpy</a>
+        <li><a href="python/numpy.html#index-11">numpy</a>
 </li>
       </ul></li>
       <li><a href="python/import.html#index-2">as</a>
@@ -316,7 +323,7 @@
     axis
 
       <ul>
-        <li><a href="python/numpy.html#index-5">numpy</a>
+        <li><a href="python/numpy.html#index-6">numpy</a>
 </li>
       </ul></li>
   </ul></td>
@@ -337,6 +344,13 @@
 
       <ul>
         <li><a href="python/types.html#index-3">types</a>
+</li>
+      </ul></li>
+      <li>
+    bool indexing
+
+      <ul>
+        <li><a href="python/numpy.html#index-4">numpy</a>
 </li>
       </ul></li>
   </ul></td>
@@ -431,7 +445,7 @@
 </li>
         <li><a href="python/logic.html#index-2">if</a>
 </li>
-        <li><a href="python/numpy.html#index-8">numpy</a>
+        <li><a href="python/numpy.html#index-9">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -447,7 +461,7 @@
     count
 
       <ul>
-        <li><a href="python/numpy.html#index-11">numpy</a>
+        <li><a href="python/numpy.html#index-12">numpy</a>
 </li>
       </ul></li>
   </ul></td>
@@ -563,7 +577,7 @@
     evaluation
 
       <ul>
-        <li><a href="python/numpy.html#index-4">numpy</a>
+        <li><a href="python/numpy.html#index-5">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -842,7 +856,7 @@
     logical operations
 
       <ul>
-        <li><a href="python/numpy.html#index-10">numpy</a>
+        <li><a href="python/numpy.html#index-11">numpy</a>
 </li>
       </ul></li>
       <li><a href="python/logic.html#index-3">looping</a>
@@ -908,17 +922,17 @@
     matrix multiply
 
       <ul>
-        <li><a href="python/numpy.html#index-7">numpy</a>
+        <li><a href="python/numpy.html#index-8">numpy</a>
 </li>
       </ul></li>
       <li>
     mean
 
       <ul>
-        <li><a href="python/numpy.html#index-6">numpy</a>
+        <li><a href="python/numpy.html#index-7">numpy</a>
 </li>
       </ul></li>
-      <li><a href="python/dictionaries.html#index-3">method chaining</a>, <a href="python/misc.html#index-6">[1]</a>, <a href="python/numpy.html#index-9">[2]</a>
+      <li><a href="python/dictionaries.html#index-3">method chaining</a>, <a href="python/misc.html#index-6">[1]</a>, <a href="python/numpy.html#index-10">[2]</a>
 </li>
       <li><a href="python/functions.html#index-3">methods</a>
 </li>
@@ -988,33 +1002,37 @@
       <li><a href="python/numpy.html#index-0">numpy</a>
 
       <ul>
-        <li><a href="python/numpy.html#index-8">all</a>
+        <li><a href="python/numpy.html#index-4">advanced indexing</a>
 </li>
-        <li><a href="python/numpy.html#index-8">any</a>
+        <li><a href="python/numpy.html#index-9">all</a>
 </li>
-        <li><a href="python/numpy.html#index-10">array comparisons</a>
+        <li><a href="python/numpy.html#index-9">any</a>
 </li>
-        <li><a href="python/numpy.html#index-5">axis</a>
+        <li><a href="python/numpy.html#index-11">array comparisons</a>
 </li>
-        <li><a href="python/numpy.html#index-8">conditionals</a>
+        <li><a href="python/numpy.html#index-6">axis</a>
 </li>
-        <li><a href="python/numpy.html#index-11">count</a>
+        <li><a href="python/numpy.html#index-4">bool indexing</a>
 </li>
-        <li><a href="python/numpy.html#index-4">evaluation</a>
+        <li><a href="python/numpy.html#index-9">conditionals</a>
+</li>
+        <li><a href="python/numpy.html#index-12">count</a>
+</li>
+        <li><a href="python/numpy.html#index-5">evaluation</a>
 </li>
         <li><a href="python/numpy.html#index-3">indexing</a>
 </li>
-        <li><a href="python/numpy.html#index-10">logical operations</a>
+        <li><a href="python/numpy.html#index-11">logical operations</a>
 </li>
         <li><a href="python/numpy.html#index-1">matrix</a>
 </li>
-        <li><a href="python/numpy.html#index-7">matrix multiply</a>
+        <li><a href="python/numpy.html#index-8">matrix multiply</a>
 </li>
-        <li><a href="python/numpy.html#index-6">mean</a>
+        <li><a href="python/numpy.html#index-7">mean</a>
 </li>
         <li><a href="python/numpy.html#index-3">slicing</a>
 </li>
-        <li><a href="python/numpy.html#index-6">standard deviation</a>
+        <li><a href="python/numpy.html#index-7">standard deviation</a>
 </li>
       </ul></li>
   </ul></td>
@@ -1231,7 +1249,7 @@
     standard deviation
 
       <ul>
-        <li><a href="python/numpy.html#index-6">numpy</a>
+        <li><a href="python/numpy.html#index-7">numpy</a>
 </li>
       </ul></li>
       <li>
