deploy: 193f2ffc84e30a55a376ebc49439eec3f6bdc9f7

--- a/genindex.html
+++ b/genindex.html
@@ -272,21 +272,21 @@
     advanced indexing
 
       <ul>
-        <li><a href="python/numpy.html#index-4">numpy</a>
+        <li><a href="python/numpy.html#index-4">numpy</a>, <a href="python/numpy.html#index-8">[1]</a>
 </li>
       </ul></li>
       <li>
     all
 
       <ul>
-        <li><a href="python/numpy.html#index-9">numpy</a>
+        <li><a href="python/numpy.html#index-13">numpy</a>
 </li>
       </ul></li>
       <li>
     any
 
       <ul>
-        <li><a href="python/numpy.html#index-9">numpy</a>
+        <li><a href="python/numpy.html#index-13">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -304,7 +304,7 @@
     array comparisons
 
       <ul>
-        <li><a href="python/numpy.html#index-11">numpy</a>
+        <li><a href="python/numpy.html#index-15">numpy</a>
 </li>
       </ul></li>
       <li><a href="python/import.html#index-2">as</a>
@@ -316,14 +316,18 @@
       <li><a href="python/how_to_write_a_program.html#index-0">assert</a>, <a href="python/misc.html#index-3">[1]</a>
 </li>
       <li><a href="python/logic.html#index-6">assignment</a>, <a href="python/variables.html#index-1">[1]</a>
+
+      <ul>
+        <li><a href="python/numpy.html#index-5">numpy</a>
 </li>
+      </ul></li>
       <li><a href="python/dictionaries.html#index-2">assignment unpacking</a>, <a href="python/variables.html#index-1">[1]</a>
 </li>
       <li>
     axis
 
       <ul>
-        <li><a href="python/numpy.html#index-6">numpy</a>
+        <li><a href="python/numpy.html#index-9">numpy</a>
 </li>
       </ul></li>
   </ul></td>
@@ -347,6 +351,13 @@
 </li>
       </ul></li>
       <li>
+    bool array
+
+      <ul>
+        <li><a href="python/numpy.html#index-7">numpy</a>, <a href="python/numpy.html#index-8">[1]</a>
+</li>
+      </ul></li>
+      <li>
     bool indexing
 
       <ul>
@@ -355,6 +366,13 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    boolean indexing
+
+      <ul>
+        <li><a href="python/numpy.html#index-8">numpy</a>
+</li>
+      </ul></li>
       <li>
     builtin
 
@@ -445,7 +463,7 @@
 </li>
         <li><a href="python/logic.html#index-2">if</a>
 </li>
-        <li><a href="python/numpy.html#index-9">numpy</a>
+        <li><a href="python/numpy.html#index-13">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -461,7 +479,7 @@
     count
 
       <ul>
-        <li><a href="python/numpy.html#index-12">numpy</a>
+        <li><a href="python/numpy.html#index-16">numpy</a>
 </li>
       </ul></li>
   </ul></td>
@@ -577,7 +595,7 @@
     evaluation
 
       <ul>
-        <li><a href="python/numpy.html#index-5">numpy</a>
+        <li><a href="python/numpy.html#index-6">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -760,10 +778,10 @@
         <li><a href="python/numpy.html#index-3">numpy</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/functions.html#index-2">instance</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     int
 
@@ -776,6 +794,13 @@
 
       <ul>
         <li><a href="python/start.html#index-5">maths</a>
+</li>
+      </ul></li>
+      <li>
+    integer indexing
+
+      <ul>
+        <li><a href="python/numpy.html#index-8">numpy</a>
 </li>
       </ul></li>
       <li><a href="python/operators.html#index-0">is</a>
@@ -856,7 +881,7 @@
     logical operations
 
       <ul>
-        <li><a href="python/numpy.html#index-11">numpy</a>
+        <li><a href="python/numpy.html#index-15">numpy</a>
 </li>
       </ul></li>
       <li><a href="python/logic.html#index-3">looping</a>
@@ -919,20 +944,27 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
+    matrix multiplication
+
+      <ul>
+        <li><a href="python/numpy.html#index-12">numpy</a>
+</li>
+      </ul></li>
+      <li>
     matrix multiply
 
       <ul>
-        <li><a href="python/numpy.html#index-8">numpy</a>
+        <li><a href="python/numpy.html#index-11">numpy</a>
 </li>
       </ul></li>
       <li>
     mean
 
       <ul>
-        <li><a href="python/numpy.html#index-7">numpy</a>
+        <li><a href="python/numpy.html#index-10">numpy</a>
 </li>
       </ul></li>
-      <li><a href="python/dictionaries.html#index-3">method chaining</a>, <a href="python/misc.html#index-6">[1]</a>, <a href="python/numpy.html#index-10">[2]</a>
+      <li><a href="python/dictionaries.html#index-3">method chaining</a>, <a href="python/misc.html#index-6">[1]</a>, <a href="python/numpy.html#index-14">[2]</a>
 </li>
       <li><a href="python/functions.html#index-3">methods</a>
 </li>
@@ -1002,37 +1034,47 @@
       <li><a href="python/numpy.html#index-0">numpy</a>
 
       <ul>
-        <li><a href="python/numpy.html#index-4">advanced indexing</a>
+        <li><a href="python/numpy.html#index-4">advanced indexing</a>, <a href="python/numpy.html#index-8">[1]</a>
 </li>
-        <li><a href="python/numpy.html#index-9">all</a>
+        <li><a href="python/numpy.html#index-13">all</a>
 </li>
-        <li><a href="python/numpy.html#index-9">any</a>
+        <li><a href="python/numpy.html#index-13">any</a>
 </li>
-        <li><a href="python/numpy.html#index-11">array comparisons</a>
+        <li><a href="python/numpy.html#index-15">array comparisons</a>
 </li>
-        <li><a href="python/numpy.html#index-6">axis</a>
+        <li><a href="python/numpy.html#index-5">assignment</a>
+</li>
+        <li><a href="python/numpy.html#index-9">axis</a>
+</li>
+        <li><a href="python/numpy.html#index-7">bool array</a>, <a href="python/numpy.html#index-8">[1]</a>
 </li>
         <li><a href="python/numpy.html#index-4">bool indexing</a>
 </li>
-        <li><a href="python/numpy.html#index-9">conditionals</a>
+        <li><a href="python/numpy.html#index-8">boolean indexing</a>
 </li>
-        <li><a href="python/numpy.html#index-12">count</a>
+        <li><a href="python/numpy.html#index-13">conditionals</a>
 </li>
-        <li><a href="python/numpy.html#index-5">evaluation</a>
+        <li><a href="python/numpy.html#index-16">count</a>
+</li>
+        <li><a href="python/numpy.html#index-6">evaluation</a>
 </li>
         <li><a href="python/numpy.html#index-3">indexing</a>
 </li>
-        <li><a href="python/numpy.html#index-11">logical operations</a>
+        <li><a href="python/numpy.html#index-8">integer indexing</a>
+</li>
+        <li><a href="python/numpy.html#index-15">logical operations</a>
 </li>
         <li><a href="python/numpy.html#index-1">matrix</a>
 </li>
-        <li><a href="python/numpy.html#index-8">matrix multiply</a>
+        <li><a href="python/numpy.html#index-12">matrix multiplication</a>
 </li>
-        <li><a href="python/numpy.html#index-7">mean</a>
+        <li><a href="python/numpy.html#index-11">matrix multiply</a>
+</li>
+        <li><a href="python/numpy.html#index-10">mean</a>
 </li>
         <li><a href="python/numpy.html#index-3">slicing</a>
 </li>
-        <li><a href="python/numpy.html#index-7">standard deviation</a>
+        <li><a href="python/numpy.html#index-10">standard deviation</a>
 </li>
       </ul></li>
   </ul></td>
@@ -1249,7 +1291,7 @@
     standard deviation
 
       <ul>
-        <li><a href="python/numpy.html#index-7">numpy</a>
+        <li><a href="python/numpy.html#index-10">numpy</a>
 </li>
       </ul></li>
       <li>
