deploy: 86f96de66a5894a7463fa9676aedb42befbd86f2

--- a/genindex.html
+++ b/genindex.html
@@ -234,6 +234,10 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python/more_looping.html#index-2">&#34;array coordinates&#34;</a>
+</li>
+      <li><a href="python/more_looping.html#index-1">&#34;cartesian coordinates&#34;</a>
+</li>
       <li>
     #
 
@@ -894,6 +898,8 @@
 </li>
         <li><a href="python/logic.html#index-5">for</a>
 </li>
+        <li><a href="python/more_looping.html#index-0">nested for loop</a>
+</li>
         <li><a href="python/logic.html#index-4">while</a>
 </li>
       </ul></li>
@@ -1013,6 +1019,13 @@
 
       <ul>
         <li><a href="python/indexing.html#index-3">slice</a>
+</li>
+      </ul></li>
+      <li>
+    nested for loop
+
+      <ul>
+        <li><a href="python/more_looping.html#index-0">loops</a>
 </li>
       </ul></li>
       <li>
