deploy: 5dc755d187faec8d06fc8a4f812556fdecd09a40

--- a/genindex.html
+++ b/genindex.html
@@ -405,6 +405,15 @@
         <li><a href="python/types.html#index-10">str</a>
 </li>
       </ul></li>
+      <li><a href="seqcomp/related_by_function.html#index-1">ChIP-seq</a>
+</li>
+      <li>
+    cis-regulatory module
+
+      <ul>
+        <li><a href="seqcomp/gene_expression.html#index-1">CRM</a>
+</li>
+      </ul></li>
       <li>
     close
 
@@ -485,6 +494,13 @@
 
       <ul>
         <li><a href="python/numpy.html#index-16">numpy</a>
+</li>
+      </ul></li>
+      <li>
+    CRM
+
+      <ul>
+        <li><a href="seqcomp/gene_expression.html#index-1">cis-regulatory module</a>
 </li>
       </ul></li>
   </ul></td>
@@ -1279,6 +1295,8 @@
         <li><a href="python/files.html#index-1">Reading a text file using an IDE</a>
 </li>
       </ul></li>
+      <li><a href="seqcomp/related_by_function.html#index-0">SELEX</a>
+</li>
       <li><a href="python/indexing.html#index-1">slice</a>
 
       <ul>
@@ -1335,6 +1353,8 @@
         <li><a href="python/indexing.html#index-2">slice</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     str
 
@@ -1360,8 +1380,6 @@
         <li><a href="python/misc.html#index-1">string, bytes</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     stride
 
@@ -1439,6 +1457,20 @@
       </ul></li>
       <li><a href="python/misc.html#index-3">testing</a>
 </li>
+      <li>
+    TF
+
+      <ul>
+        <li><a href="seqcomp/gene_expression.html#index-1">transcription factor</a>
+</li>
+      </ul></li>
+      <li>
+    TFBS
+
+      <ul>
+        <li><a href="seqcomp/gene_expression.html#index-1">transcription factor binding site</a>
+</li>
+      </ul></li>
       <li><a href="python/import.html#index-3">third party libraries</a>
 </li>
       <li>
@@ -1449,12 +1481,42 @@
 </li>
       </ul></li>
       <li>
+    transcription factor
+
+      <ul>
+        <li><a href="seqcomp/gene_expression.html#index-1">TF</a>
+</li>
+      </ul></li>
+      <li>
+    transcription factor binding site
+
+      <ul>
+        <li><a href="seqcomp/gene_expression.html#index-1">TFBS</a>
+</li>
+      </ul></li>
+      <li>
+    transcription start site
+
+      <ul>
+        <li><a href="seqcomp/gene_expression.html#index-0">TSS</a>
+</li>
+      </ul></li>
+      <li>
     True / False
 
       <ul>
         <li><a href="python/types.html#index-3">types</a>
 </li>
       </ul></li>
+      <li>
+    TSS
+
+      <ul>
+        <li><a href="seqcomp/gene_expression.html#index-0">transcription start site</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     tuple
 
@@ -1475,8 +1537,6 @@
         <li><a href="python/types.html#index-8">types</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     types
 
