deploy: ba7d82459af1b15a91bca24a7cbedb46bbaca530

--- a/genindex.html
+++ b/genindex.html
@@ -900,6 +900,8 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="seqcomp/pssm.html#index-1">log-odds ratios</a>
+</li>
       <li>
     logical operations
 
@@ -1197,10 +1199,26 @@
 </li>
       </ul></li>
       <li>
+    Position Specific Scoring Matrix
+
+      <ul>
+        <li><a href="seqcomp/pssm.html#index-0">PSSM</a>
+</li>
+      </ul></li>
+      <li>
     powers
 
       <ul>
         <li><a href="python/start.html#index-6">maths</a>
+</li>
+      </ul></li>
+      <li><a href="seqcomp/pssm.html#index-2">profiles</a>
+</li>
+      <li>
+    PSSM
+
+      <ul>
+        <li><a href="seqcomp/pssm.html#index-0">Position Specific Scoring Matrix</a>
 </li>
       </ul></li>
   </ul></td>
