deploy: e86fb3226f503b1d387dd424bdfeea4b1731d3a1

--- a/genindex.html
+++ b/genindex.html
@@ -185,6 +185,7 @@
  | <a href="#N"><strong>N</strong></a>
  | <a href="#O"><strong>O</strong></a>
  | <a href="#P"><strong>P</strong></a>
+ | <a href="#Q"><strong>Q</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
@@ -233,10 +234,10 @@
         <li><a href="python/logic.html#index-0">white space</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/more_looping.html#index-2">&#34;array coordinates&#34;</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/more_looping.html#index-1">&#34;cartesian coordinates&#34;</a>
 </li>
       <li>
@@ -247,6 +248,8 @@
 </li>
       </ul></li>
       <li><a href="python/import.html#index-3">3rd party libraries</a>
+</li>
+      <li><a href="seqcomp/statistics.html#index-2">:math:`H_o`</a>
 </li>
       <li><a href="python/operators.html#index-0">&lt;</a>
 </li>
@@ -534,8 +537,6 @@
         <li><a href="python/misc.html#index-1">string, encode</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     dict
 
@@ -549,8 +550,17 @@
         <li><a href="python/types.html#index-7">types collection objects</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/dir_help.html#index-0">dir()</a>
 </li>
+      <li>
+    distribution
+
+      <ul>
+        <li><a href="seqcomp/statistics.html#index-3">quantile</a>
+</li>
+      </ul></li>
       <li>
     divide
 
@@ -760,10 +770,10 @@
         <li><a href="python/visualisation.html#index-1">plotly</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/dir_help.html#index-1">help()</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     How to ask for help related to these notes
 
@@ -771,6 +781,8 @@
         <li><a href="contribute.html#index-0">screencasts</a>
 </li>
       </ul></li>
+      <li><a href="seqcomp/statistics.html#index-2">hypothesis testing</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -1224,6 +1236,19 @@
   </ul></td>
 </tr></table>
 
+<h2 id="Q">Q</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    quantile
+
+      <ul>
+        <li><a href="seqcomp/statistics.html#index-3">distribution</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -1257,6 +1282,8 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="seqcomp/statistics.html#index-4">resampling statistic</a>
+</li>
       <li>
     return
 
@@ -1362,6 +1389,12 @@
         <li><a href="python/writing_functions.html#index-5">pass</a>
 </li>
         <li><a href="python/writing_functions.html#index-0">return</a>
+</li>
+      </ul></li>
+      <li><a href="seqcomp/statistics.html#index-0">statistical distribution</a>
+
+      <ul>
+        <li><a href="seqcomp/statistics.html#index-1">uniform</a>
 </li>
       </ul></li>
       <li>
@@ -1592,10 +1625,17 @@
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python/variables.html#index-1">unpacking</a>
+      <li>
+    uniform
+
+      <ul>
+        <li><a href="seqcomp/statistics.html#index-1">statistical distribution</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python/variables.html#index-1">unpacking</a>
+</li>
       <li><a href="python/misc.html#index-5">unzip</a>
 </li>
   </ul></td>
