--- a/python/more_looping.html
+++ b/python/more_looping.html
@@ -276,7 +276,7 @@
 </div>
 </div>
 </div>
-<div class="sidebar">
+<div class="sidebar" id="array-coordinates">
 <p class="sidebar-title">Differences between cartesian and array coordinates</p>
 <p>It’s worth pointing out a significant distinction between <span class="target" id="index-1"></span>“cartesian coordinates” and what I’ll refer to as <span class="target" id="index-2"></span>“array coordinates”. The former is what you know and love from graphing data where coordinates are expressed as <span class="math notranslate nohighlight">\(x, y\)</span> in that order, where the <span class="math notranslate nohighlight">\(x\)</span>-value occurs first and represents a position on a horizontal axis – increasing from left to right. The <span class="math notranslate nohighlight">\(y\)</span>-value comes second and represents a position on the vertical axis – increasing from bottom to top. Array coordinates are totally different – they are expressed as in <span class="math notranslate nohighlight">\(row, column\)</span> order. The value for column is analogous to the <span class="math notranslate nohighlight">\(x\)</span> values (representing horizontal position and increases left to right). However, the value for <code class="docutils literal notranslate"><span class="pre">row</span></code> occurs first and it represents the vertical position. Row values also increases top to bottom! Hence, the <code class="docutils literal notranslate"><span class="pre">two_d[1]</span></code> refers to the second row which is at the bottom. This is exactly same numbering pattern as you see in spreadsheet programs. The distinction matters when you try and accumulate array based points for plotting.</p>
 </div>
