deploy: e4b1963c40885b132faaa41bbd7ac517fc143d55

--- a/genindex.html
+++ b/genindex.html
@@ -1218,6 +1218,13 @@
 </li>
       </ul></li>
       <li>
+    Position Specific Weights Matrix
+
+      <ul>
+        <li><a href="seqcomp/related_by_function.html#index-2">PWM</a>
+</li>
+      </ul></li>
+      <li>
     powers
 
       <ul>
@@ -1231,6 +1238,13 @@
 
       <ul>
         <li><a href="seqcomp/pssm.html#index-0">Position Specific Scoring Matrix</a>
+</li>
+      </ul></li>
+      <li>
+    PWM
+
+      <ul>
+        <li><a href="seqcomp/related_by_function.html#index-2">Position Specific Weights Matrix</a>
 </li>
       </ul></li>
   </ul></td>
